--- a/.github/workflows/car-demo-updated-pipeline.yml
+++ b/.github/workflows/car-demo-updated-pipeline.yml
@@ -25,7 +25,7 @@ jobs:
           cat projects-changes-deploy.txt | while read repo; do
             echo "Processing repository: $repo"
             cd $repo
-            mvn clean verify sonar:sonar -Dsonar.host.url=https://sonarcloud.io  -Dsonar.organization=nashtech
+            mvn clean verify sonar:sonar -Dsonar.host.url=https://sonarcloud.io  -Dsonar.organization=nashtech -Dsonar.branch.name=master
             cd ..
           done        
         env:
