--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -212,7 +212,7 @@
                     <plugin>
                         <groupId>org.sonarsource.scanner.maven</groupId>
                         <artifactId>sonar-maven-plugin</artifactId>
-                        <version>3.9.1.2184</version>
+                        <version>${maven.sonar.version}</version>
                         <executions>
                             <execution>
                                 <phase>verify</phase>
