--- a/.github/workflows/car-demo-updated-pipeline.yml
+++ b/.github/workflows/car-demo-updated-pipeline.yml
@@ -30,7 +30,7 @@ jobs:
             # Check if it's the Angular project (car-ui)
             if [ "$repo" == "car-ui" ]; then
               # Angular-specific commands
-              #cd car-demo/car-ui
+              cd car-demo/car-ui
               npm install
 
               # Install SonarScanner for Node.js
@@ -49,35 +49,3 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-  setup-build-publish-deploy:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-      id-token: write
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 19
-      uses: actions/setup-java@v3
-      with:
-        java-version: '19'
-        distribution: 'temurin'
-        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-        settings-path: ${{ github.workspace }}
-    - uses: 'google-github-actions/auth@v1'
-      with:
-        credentials_json: ${{ secrets.GKE_KEY }}
-    - uses: google-github-actions/setup-gcloud@v1
-      with:
-        project_id: ${{ env.GKE_PROJECT }}
-
-      # Configure Docker to use the gcloud command-line tool as a credential
-      # helper for authentication
-    - name: configure docker
-      run: |-
-        gcloud --quiet auth configure-docker
-    - name: Build, Publish, and Deploy
-      run: |
-        . apps-deployment-script.sh "us-east1"
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
