--- a/.github/workflows/car-demo-updated-pipeline.yml
+++ b/.github/workflows/car-demo-updated-pipeline.yml
@@ -33,7 +33,7 @@ jobs:
               npm install
               
               # Run tests and generate code coverage reports
-              npm run test -- --coverage
+              ng test --code-coverage
               
               # Install SonarScanner for Node.js
               npm install -g sonarqube-scanner
